Первая часть переработанных тестов